--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,9 @@
 {
-  "rewrites": [
-    { "source": "/api/(.*)", "destination": "https://estate-management-system-ccbt.onrender.com/api/$1" }
+  "builds": [
+    { "src": "client/package.json", "use": "@vercel/static-build" }
+  ],
+  "routes": [
+    { "src": "/api/(.*)", "dest": "https://estate-management-system-ccbt.onrender.com/api/$1" },
+    { "src": "/(.*)", "dest": "/client/dist/$1" }
   ]
 }
