--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,7 @@
 {
-  "builds": [
-    { "src": "client/package.json", "use": "@vercel/static-build" }
-  ],
-  "routes": [
-    { "src": "/api/(.*)", "dest": "https://estate-management-system-ccbt.onrender.com/api/$1" },
-    { "src": "/(.*)", "dest": "/client/dist/$1" }
+  "buildCommand": "npm install && npm run build --prefix client",
+  "outputDirectory": "client/dist",
+  "rewrites": [
+    { "source": "/api/(.*)", "destination": "https://estate-management-system-ccbt.onrender.com/api/$1" }
   ]
 }
