--- a/package.json
+++ b/package.json
@@ -47,18 +47,24 @@
     "connect-pg-simple": "^10.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
     "drizzle-orm": "^0.44.7",
     "drizzle-zod": "^0.7.1",
+    "embla-carousel-react": "^8.6.0",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.368.0",
     "next-themes": "^0.3.0",
     "pg": "^8.13.0",
     "react": "^18.3.1",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-resizable-panels": "^2.0.18",
     "recharts": "^2.15.2",
     "qrcode": "^1.5.4",
+    "vaul": "^1.1.2",
     "wouter": "^3.8.0",
     "tailwind-merge": "^2.2.3",
     "tailwindcss-animate": "^1.0.7",
