--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "express-session": "^1.18.1",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.368.0",
+    "memoizee": "^0.4.17",
     "next-themes": "^0.3.0",
     "pg": "^8.13.0",
     "react": "^18.3.1",
@@ -71,6 +72,10 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/connect-pg-simple": "^7.0.3",
+    "@types/express": "^4.17.21",
+    "@types/express-session": "^1.18.1",
+    "@types/memoizee": "^0.4.12",
     "@types/node": "^20.12.7",
     "@types/react": "^18.2.58",
     "@types/react-dom": "^18.2.19",
