Sync Vercel config from Desktop copy

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,9 @@
+
 {
-  "buildCommand": "npm install && npm run build",
-  "outputDirectory": "client/dist",
   "rewrites": [
-    { "source": "/api/(.*)", "destination": "https://estate-management-system-ccbt.onrender.com/api/$1" }
+    {
+      "source": "/api/(.*)",
+      "destination": "https://estate-management-system-ccbt.onrender.com/api/$1"
+    }
   ]
 }
