--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "@radix-ui/react-dialog": "^1.1.7",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-form": "^0.0.2",
-    "@radix-ui/react-label": "^2.1.3",
     "@radix-ui/react-hover-card": "^1.1.6",
+    "@radix-ui/react-label": "^2.1.3",
     "@radix-ui/react-menubar": "^1.1.7",
     "@radix-ui/react-navigation-menu": "^1.2.6",
     "@radix-ui/react-popover": "^1.1.7",
@@ -38,15 +38,15 @@
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-switch": "^1.1.4",
     "@radix-ui/react-tabs": "^1.1.4",
-    "@radix-ui/react-tooltip": "^1.2.0",
     "@radix-ui/react-toast": "^1.1.7",
     "@radix-ui/react-toggle": "^1.1.3",
     "@radix-ui/react-toggle-group": "^1.1.3",
+    "@radix-ui/react-tooltip": "^1.2.0",
     "@tanstack/react-query": "^5.90.11",
     "@tanstack/react-query-devtools": "^5.91.1",
-    "connect-pg-simple": "^10.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "connect-pg-simple": "^10.0.0",
     "date-fns": "^3.6.0",
     "drizzle-orm": "^0.44.7",
     "drizzle-zod": "^0.7.1",
@@ -55,24 +55,25 @@
     "lucide-react": "^0.368.0",
     "next-themes": "^0.3.0",
     "pg": "^8.13.0",
+    "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "recharts": "^2.15.2",
-    "qrcode": "^1.5.4",
-    "wouter": "^3.8.0",
+    "resend": "^6.5.2",
     "tailwind-merge": "^2.2.3",
     "tailwindcss-animate": "^1.0.7",
+    "wouter": "^3.8.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^20.12.7",
+    "@types/qrcode": "^1.5.6",
     "@types/react": "^18.2.58",
     "@types/react-dom": "^18.2.19",
-    "cross-env": "^7.0.3",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.20",
-    "@tailwindcss/typography": "^0.5.15",
-    "@types/qrcode": "^1.5.6",
+    "cross-env": "^7.0.3",
     "esbuild": "^0.21.5",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
